[incubator-kie-issues#1015] Implement configurable log on DMN rest endpoints (#2017)
* [incubator-kie-issues#1015] Implement configurable log on DMN rest endpoints

* [incubator-kie-issues#1015] Fix typo

* [incubator-kie-issues#1015] Fix as per PR suggestion

---------

Co-authored-by: Gabriele-Cardosi <gabriele.cardosi@ibm.com>