@@ -19,7 +19,6 @@
 package org.kie.kogito.jitexecutor.dmn.api;
 
 import java.io.StringReader;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -36,6 +35,8 @@ import org.kie.kogito.jitexecutor.common.requests.MultipleResourcesPayload;
 import org.kie.kogito.jitexecutor.common.requests.ResourceWithURI;
 import org.kie.kogito.jitexecutor.dmn.responses.JITDMNMessage;
 import org.kie.kogito.jitexecutor.dmn.utils.ResolveByKey;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.POST;
@@ -47,13 +48,21 @@ import jakarta.ws.rs.core.Response;
 @Path("jitdmn/validate")
 public class DMNValidationResource {
 
+    private static final Logger LOGGER = LoggerFactory.getLogger(DMNValidationResource.class);
+
+    static final String LINEBREAK = "******\n";
+
     // trick for resolver/implementation for NI
-    static final DMNValidator validator = DMNValidatorFactory.newValidator(Arrays.asList(new ExtendedDMNProfile()));
+    static final DMNValidator validator = DMNValidatorFactory.newValidator(List.of(new ExtendedDMNProfile()));
 
     @POST
     @Consumes(MediaType.APPLICATION_XML)
     @Produces(MediaType.APPLICATION_JSON)
     public Response schema(String payload) {
+        LOGGER.debug(LINEBREAK);
+        LOGGER.debug("jitdmn/validate");
+        LOGGER.debug(payload);
+        LOGGER.debug(LINEBREAK);
         List<DMNMessage> validate =
                 validator.validate(new StringReader(payload), Validation.VALIDATE_SCHEMA, Validation.VALIDATE_MODEL, Validation.VALIDATE_COMPILATION, Validation.ANALYZE_DECISION_TABLE);
         List<JITDMNMessage> result = validate.stream().map(JITDMNMessage::of).collect(Collectors.toList());
@@ -64,6 +73,10 @@ public class DMNValidationResource {
     @Consumes(MediaType.APPLICATION_JSON)
     @Produces(MediaType.APPLICATION_JSON)
     public Response schema(MultipleResourcesPayload payload) {
+        LOGGER.debug(LINEBREAK);
+        LOGGER.debug("jitdmn/validate");
+        LOGGER.debug(payload.toString());
+        LOGGER.debug(LINEBREAK);
         Map<String, Resource> resources = new LinkedHashMap<>();
         for (ResourceWithURI r : payload.getResources()) {
             Resource readerResource = ResourceFactory.newReaderResource(new StringReader(r.getContent()), "UTF-8");
